--- a/index.html
+++ b/index.html
@@ -12,42 +12,22 @@
 
 <body>
     <div class="o-container">
-        <div class="o-row">
+        <div class="o-row" style="background-color: burlywood;">
             <div class="o-col o-col--medium50 o-col--large25" style="height: 400px; margin-bottom: 50px;">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore accusamus, iste suscipit temporibus cum, cumque voluptate ducimus, optio veritatis quis corporis. Consectetur quisquam sint provident placeat numquam accusamus, quas quam
-                    id inventore facilis repellendus minus officia possimus amet, ex cum iusto pariatur sequi ea dolores debitis deleniti. Nam quo iure rem possimus quasi nisi ab eius dolorem consectetur aperiam soluta dicta iste voluptas saepe laboriosam
-                    voluptatibus commodi, obcaecati id corporis delectus! Temporibus in officiis voluptatum nemo, placeat aliquam nihil libero cum sint perspiciatis harum ab vitae eius illo adipisci exercitationem. Ullam delectus quis, et nobis vero laboriosam
-                    ex laudantium molestias veritatis enim, reiciendis deserunt adipisci voluptates similique quae, labore non corporis nemo nulla exercitationem. Consequuntur perferendis ab iure molestias laudantium quasi ullam beatae quam in est corrupti
-                    alias inventore voluptas ducimus, tenetur ipsa! Tempora, modi tenetur, velit accusantium rerum maiores quisquam delectus optio deleniti a inventore quasi ut culpa mollitia numquam? Nobis non enim minima porro odio numquam beatae? Quaerat
-                    libero laborum cupiditate suscipit doloremque animi alias fugit voluptas laudantium et ad expedita repellendus, debitis optio quod asperiores vitae incidunt, harum in recusandae officiis fuga! Quaerat non aliquam labore esse neque
-                    culpa, nemo eligendi suscipit id facilis voluptas praesentium provident?</p>
+                <a class="c-btn c-btn--accent" href="#">Zobacz więcej</a>
+                <a class="c-btn c-btn--dark-blue" href="#">Zobacz więcej</a>
+                <a class="c-btn c-btn--light" href="#">Zobacz więcej</a>
+                <a class="c-btn c-btn--primary" href="#">Zobacz więcej</a>
+                <a class="c-btn c-btn--outline" href="#">Zobacz więcej</a>
             </div>
             <div class="o-col o-col--medium50 o-col--large25" style="height: 400px; margin-bottom: 50px;">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, aliquid dicta voluptatem fugit ad aperiam deleniti quos totam, excepturi assumenda temporibus quidem distinctio incidunt, alias enim quisquam nulla qui aliquam dolorum
-                    possimus. Libero fugiat odio expedita, hic nulla sit eveniet consectetur sequi temporibus facilis aliquid saepe, dolores architecto ea accusamus, perspiciatis vel. Iste, qui quia facere labore consequuntur aliquam, reiciendis, odio
-                    error beatae non expedita ut ipsa exercitationem voluptatum quidem iusto. Ad placeat sequi corrupti minima laudantium rerum aliquid iure nostrum nemo. Distinctio illum exercitationem molestiae vitae maiores quis ipsa impedit fuga quidem.
-                    Eos accusantium ullam perspiciatis corrupti, quibusdam iste dolorum distinctio, fugiat repudiandae amet odio reiciendis ut sapiente veniam sed maxime obcaecati quis nobis rem voluptate similique nesciunt. Delectus reprehenderit consectetur
-                    facere consequatur quae porro rerum, commodi quos. Natus nulla a quia ratione aut aperiam necessitatibus optio, tempora quidem velit eius accusantium omnis? Dolore quisquam voluptates nesciunt assumenda similique accusamus nostrum
-                    ratione ullam fugit rem eos at veritatis explicabo deleniti, placeat quasi. Sit dignissimos eum quasi vero quis recusandae fuga molestias ex odio, aliquam doloribus, beatae laborum est perspiciatis? Maiores labore sunt impedit voluptate
-                    facere reiciendis totam! Animi accusamus tempora repellendus delectus veniam tenetur sequi dolore eaque fugiat doloribus?</p>
-            </div>
-            <div class="o-col o-col--medium50 o-col--large25" style="height: 400px; margin-bottom: 50px;">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore accusamus, iste suscipit temporibus cum, cumque voluptate ducimus, optio veritatis quis corporis. Consectetur quisquam sint provident placeat numquam accusamus, quas quam
-                    id inventore facilis repellendus minus officia possimus amet, ex cum iusto pariatur sequi ea dolores debitis deleniti. Nam quo iure rem possimus quasi nisi ab eius dolorem consectetur aperiam soluta dicta iste voluptas saepe laboriosam
-                    voluptatibus commodi, obcaecati id corporis delectus! Temporibus in officiis voluptatum nemo, placeat aliquam nihil libero cum sint perspiciatis harum ab vitae eius illo adipisci exercitationem. Ullam delectus quis, et nobis vero laboriosam
-                    ex laudantium molestias veritatis enim, reiciendis deserunt adipisci voluptates similique quae, labore non corporis nemo nulla exercitationem. Consequuntur perferendis ab iure molestias laudantium quasi ullam beatae quam in est corrupti
-                    alias inventore voluptas ducimus, tenetur ipsa! Tempora, modi tenetur, velit accusantium rerum maiores quisquam delectus optio deleniti a inventore quasi ut culpa mollitia numquam? Nobis non enim minima porro odio numquam beatae? Quaerat
-                    libero laborum cupiditate suscipit doloremque animi alias fugit voluptas laudantium et ad expedita repellendus, debitis optio quod asperiores vitae incidunt, harum in recusandae officiis fuga! Quaerat non aliquam labore esse neque
-                    culpa, nemo eligendi suscipit id facilis voluptas praesentium provident?</p>
-            </div>
-            <div class="o-col o-col--medium50 o-col--large25" style="height: 400px; margin-bottom: 50px;">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, aliquid dicta voluptatem fugit ad aperiam deleniti quos totam, excepturi assumenda temporibus quidem distinctio incidunt, alias enim quisquam nulla qui aliquam dolorum
-                    possimus. Libero fugiat odio expedita, hic nulla sit eveniet consectetur sequi temporibus facilis aliquid saepe, dolores architecto ea accusamus, perspiciatis vel. Iste, qui quia facere labore consequuntur aliquam, reiciendis, odio
-                    error beatae non expedita ut ipsa exercitationem voluptatum quidem iusto. Ad placeat sequi corrupti minima laudantium rerum aliquid iure nostrum nemo. Distinctio illum exercitationem molestiae vitae maiores quis ipsa impedit fuga quidem.
-                    Eos accusantium ullam perspiciatis corrupti, quibusdam iste dolorum distinctio, fugiat repudiandae amet odio reiciendis ut sapiente veniam sed maxime obcaecati quis nobis rem voluptate similique nesciunt. Delectus reprehenderit consectetur
-                    facere consequatur quae porro rerum, commodi quos. Natus nulla a quia ratione aut aperiam necessitatibus optio, tempora quidem velit eius accusantium omnis? Dolore quisquam voluptates nesciunt assumenda similique accusamus nostrum
-                    ratione ullam fugit rem eos at veritatis explicabo deleniti, placeat quasi. Sit dignissimos eum quasi vero quis recusandae fuga molestias ex odio, aliquam doloribus, beatae laborum est perspiciatis? Maiores labore sunt impedit voluptate
-                    facere reiciendis totam! Animi accusamus tempora repellendus delectus veniam tenetur sequi dolore eaque fugiat doloribus?</p>
+                <div class="c-icon-box">
+                    <div class="c-icon-box__image">
+                        <img class="c-icon-box__icon" src="images/icons/ikona-1.png" alt="ikona pierwsza">
+                    </div>
+                    <h4 class="c-heading c-heading--level4 c-heading--upper">Pełny zakres</h4>
+                    <p class="c-icon-box__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum accusamus eos ab?</p>
+                </div>
             </div>
         </div>
     </div>
