created about-us section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--header-->
     <header class="t-site-header">
         <div class="o-container">
             <div class="t-site-header__top">
@@ -41,6 +42,30 @@
             </div>
         </div>
     </header>
+    <!--about us-->
+    <section class="t-about-us">
+        <div class="o-container">
+            <div class="o-row o-row--center-y">
+                <div class="o-col o-col--md50 t-about-us__left">
+                    <span class="c-label">About us</span>
+                    <h2 class="c-heading c-heading-level2 c-heading--upper u-mb-2">Our team for you</h2>
+                    <p class="u-mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, praesentium temporibus vel ex voluptate eaque est iste, perspiciatis totam consectetur, numquam ea ratione veniam qui cum sint facere odit libero.</p>
+                    <div class="t-about-us__buttons">
+                        <a class="c-btn c-btn--primary t-about-us__btn" href="">Cardiology</a>
+                        <a class="c-btn c-btn--primary t-about-us__btn" href="">Hepatology</a>
+                        <a class="c-btn c-btn--primary t-about-us__btn" href="">Opthamology</a>
+                        <a class="c-btn c-btn--primary t-about-us__btn" href="">Neurology</a>
+                        <a class="c-btn c-btn--primary t-about-us__btn" href="">Otology</a>
+                        <a class="c-btn c-btn--primary t-about-us__btn" href="">Huntington's</a>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 t-about-us__right">
+                    <img src="images/klinika.png" alt="our clinic">
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
