finished creation of assets section

--- a/index.html
+++ b/index.html
@@ -64,9 +64,87 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!--assets-->
+    <section class="t-assets">
+        <div class="o-container">
+            <div class="o-row">
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-1.png" alt="icon 1">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">Test Tube</h4>
+                        <p class="c-icon-box__text">Piece of laboratory glassware consisting of a finger-like length of glass or cleare plastic tubing</p>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-2.png" alt="icon 2">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">Blood testing</h4>
+                        <p class="c-icon-box__text">A blood test is a laboratory analysis is usually extracted from a vein</p>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-3.png" alt="icon 3">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">general treatment</h4>
+                        <p class="c-icon-box__text">General Treatment Guidelines are systematically developed statements that assist prescriber</p>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-4.png" alt="icon 4">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">Dna testing</h4>
+                        <p class="c-icon-box__text">DNA paternity testing is the use of DNA to determine two individuals are biologically connected</p>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-5.png" alt="icon 5">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">pharmacy</h4>
+                        <p class="c-icon-box__text">A pill was originally defined a small, round, solid pharmaceutical oral dosage form of medication</p>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-6.png" alt="icon 6">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">Treatment</h4>
+                        <p class="c-icon-box__text">Treatment plans to assure the appropriate medical care is provided to disabled, ill or injured individuals</p>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-7.png" alt="icon 7">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">24/7 support</h4>
+                        <p class="c-icon-box__text">Free 24/7 support for parents in emergency time addition to free checkups every six months</p>
+                    </div>
+                </div>
+                <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
+                    <div class="c-icon-box">
+                        <div class="c-icon-box__image">
+                            <img src="images/icons/ikona-8.png" alt="icon 8">
+                        </div>
+                        <h4 class="c-heading c-heading--level4 c-heading--upper">emergency</h4>
+                        <p class="c-icon-box__text">Humanitarian NGO that provides free medical treatment to civilian victims of war, poverty and landmines</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
-
 </body>
 
 </html>
