finished creation of blog section

--- a/index.html
+++ b/index.html
@@ -143,8 +143,57 @@
                 </div>
             </div>
         </div>
-
     </section>
+    <!--blog-->
+    <section class="t-posts-list">
+        <div class="t-posts-list__content">
+            <div class="o-container">
+                <div class="o-row">
+                    <div class="o-col o-col--lg33">
+                        <div class="t-posts-list__item">
+                            <div class="t-posts-list__image">
+                                <img src="images/blog-1.jpg" alt="blog 1">
+                                <span class="c-label t-posts-list__badge">New York</span>
+                            </div>
+                            <span class="t-posts-list__date">23/05/2018</span>
+                            <h3 class="c-heading c-heading--level3 c-heading--upper">New office healthcare</h3>
+                            <p class="t-posts-list__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consectetur alias culpa consequuntur eaque ipsum nobis, libero ducimus.</p>
+                        </div>
+                    </div>
+                    <div class="o-col o-col--lg33">
+                        <div class="t-posts-list__item">
+                            <div class="t-posts-list__image">
+                                <img src="images/blog-2.jpg" alt="blog 2">
+                                <span class="c-label t-posts-list__badge">Australia</span>
+                            </div>
+                            <span class="t-posts-list__date">03/08/2018</span>
+                            <h3 class="c-heading c-heading--level3 c-heading--upper">The best dental office</h3>
+                            <p class="t-posts-list__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consectetur alias culpa consequuntur eaque ipsum nobis, libero ducimus.</p>
+                        </div>
+                    </div>
+                    <div class="o-col o-col--lg33">
+                        <div class="t-posts-list__item">
+                            <div class="t-posts-list__image">
+                                <img src="images/blog-3.jpg" alt="blog 3">
+                                <span class="c-label t-posts-list__badge">London</span>
+                            </div>
+                            <span class="t-posts-list__date">14/011/2018</span>
+                            <h3 class="c-heading c-heading--level3 c-heading--upper">the longest surgery in uk</h3>
+                            <p class="t-posts-list__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consectetur alias culpa consequuntur eaque ipsum nobis, libero ducimus.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="o-row">
+                <div class="o-col u-text-center">
+                    <a class="c-btn c-btn--primary" href="#">More News</a>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+    <!--location-->
 </body>
 
 </html>
