finished creatiing section with localization

--- a/index.html
+++ b/index.html
@@ -194,6 +194,28 @@
         </div>
     </section>
     <!--location-->
+    <section class="t-clinic-localization">
+        <div class="o-container">
+            <div class="o-row">
+                <div class="o-col t-clinic-localization__right">
+                    <div class="t-clinic-localization__content">
+                        <span class="c-label u-white">Departments</span>
+                        <h2 class="c-heading c-heading--level2 c-heading--upper t-clinic-localization__header c-heading--white">Check our localizations</h2>
+                        <p class="t-clinic-localization__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere debitis, consequatur sed obcaecati recusandae porro. Dignissimos.</p>
+                        <div class="t-clinic-localization__buttons">
+                            <a class="c-btn c-btn--light t-clinic-localization__btn" href="">Australia</a>
+                            <a class="c-btn c-btn--light t-clinic-localization__btn" href="">Brazil</a>
+                            <a class="c-btn c-btn--light t-clinic-localization__btn" href="">Germany</a>
+                            <a class="c-btn c-btn--light t-clinic-localization__btn" href="">Irleand</a>
+                            <a class="c-btn c-btn--light t-clinic-localization__btn" href="">Paris</a>
+                            <a class="c-btn c-btn--light t-clinic-localization__btn" href="">United kingdom</a>
+                        </div>
+                        <a class="c-btn c-btn--outline t-clinic-localization__more" href="">See more &nbsp;&gt;&gt;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
