--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <div class="o-col o-col--lg75 t-site-header__menu">
                         <nav class="c-nav">
                             <a class="c-nav__item" href="#">Home</a>
-                            <a class="c-nav__item" href="#">About us</a>
-                            <a class="c-nav__item" href="#">Services</a>
-                            <a class="c-nav__item" href="#">News</a>
-                            <a class="c-nav__item" href="#">Departments</a>
-                            <a class="c-nav__item" href="#">Contact</a>
+                            <a class="c-nav__item" href="#about-us">About us</a>
+                            <a class="c-nav__item" href="#assets">Services</a>
+                            <a class="c-nav__item" href="#news">News</a>
+                            <a class="c-nav__item" href="#departments">Departments</a>
+                            <a class="c-nav__item" href="#contact">Contact</a>
                         </nav>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
         </div>
     </header>
     <!--about us-->
-    <section class="t-about-us">
+    <section class="t-about-us" id="about-us">
         <div class="o-container">
             <div class="o-row o-row--center-y">
                 <div class="o-col o-col--md50 t-about-us__left">
@@ -66,7 +66,7 @@
         </div>
     </section>
     <!--assets-->
-    <section class="t-assets">
+    <section class="t-assets" id="assets">
         <div class="o-container">
             <div class="o-row">
                 <div class="o-col o-col--md50 o-col--lg25 t-assets__item">
@@ -145,7 +145,7 @@
         </div>
     </section>
     <!--blog-->
-    <section class="t-posts-list">
+    <section class="t-posts-list" id="news">
         <div class="t-posts-list__content">
             <div class="o-container">
                 <div class="o-row">
@@ -194,7 +194,7 @@
         </div>
     </section>
     <!--location-->
-    <section class="t-clinic-localization">
+    <section class="t-clinic-localization" id="departments">
         <div class="o-container">
             <div class="o-row">
                 <div class="o-col t-clinic-localization__right">
@@ -216,6 +216,68 @@
             </div>
         </div>
     </section>
+    <footer class="t-site-footer" id="contact">
+        <div class="o-container">
+            <div class="o-row">
+                <div class="t-site-footer__item">
+                    <div class="t-site-footer__heading">
+                        <img src="images/logo-blue.png" alt="blue logo">
+                    </div>
+                    <div class="t-site-footer__address">
+                        <strong class="t-site-footer__label">Company Mailig Address:</strong>
+                        <ul class="c-list c-list--unstyled">
+                            <li class="c-list__item t-site-footer__contact-item">9398 N. Rockledge Street <br> Palm Harbor, FL 34683</li>
+                            <li class="c-list__item t-site-footer__contact-item">P: +1-202-555-0117 <br> info@healthcare.com</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="t-site-footer__item">
+                    <div class="t-site-footer__heading">
+                        <h5 class="c-heading c-heading--level5 c-heading--upper t-site-footer__text-heading">Our Specializations</h5>
+                    </div>
+                    <ul class="c-list c-list--unstyled">
+                        <li class="c-list__item">Cardiology</li>
+                        <li class="c-list__item">Neurology</li>
+                        <li class="c-list__item">Hepatology</li>
+                        <li class="c-list__item">Otology</li>
+                        <li class="c-list__item">Opthamology</li>
+                        <li class="c-list__item">Huntington's</li>
+                    </ul>
+                </div>
+                <div class="t-site-footer__item">
+                    <div class="t-site-footer__heading">
+                        <h5 class="c-heading c-heading--level5 c-heading--upper t-site-footer__text-heading">Sercvices</h5>
+                    </div>
+                    <ul class="c-list c-list--unstyled">
+                        <li class="c-list__item">Emergency Care</li>
+                        <li class="c-list__item">Operation Theater</li>
+                        <li class="c-list__item">Medical Checkup</li>
+                        <li class="c-list__item">Diagnostic Center</li>
+                        <li class="c-list__item">Outdoor Checkup</li>
+                        <li class="c-list__item">Pharmacy Services</li>
+                    </ul>
+                </div>
+                <div class="t-site-footer__item">
+                    <div class="t-site-footer__heading">
+                        <h5 class="c-heading c-heading--level5 c-heading--upper t-site-footer__text-heading">Resources</h5>
+                    </div>
+                    <ul class="c-list c-list--unstyled">
+                        <li class="c-list__item"><a href="#">Platform</a></li>
+                        <li class="c-list__item"><a href="">Blog</a></li>
+                        <li class="c-list__item"><a href="">Career</a></li>
+                        <li class="c-list__item"><a href="">Documentation</a></li>
+                        <li class="c-list__item"><a href="">Certificates</a></li>
+                        <li class="c-list__item"><a href="">Security</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="t-site-footer__copy u-bg-light">
+            <div class="o-container u-text-center">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
